tests/toylang/neg/001190_mutation.toylang
program a = { program a = { } . a : bool; } .
